# ziddfit-backend

./: .gitignore  loginnew.html  main.py  manage.py  pyproject.toml  readme.md  requirements.txt
Plan/: apps.py  models.py  serializer.py  signals.py  urls.py  views.py
Plan/migrations/: 0001_initial.py  0002_initial.py  0002_plan_config_plan_subcription_delete_plan_and_more.py  0003_alter_plan_config_tier.py
core/: admin.py  pagination.py  signals.py
core/migrations/: 0001_initial.py  0002_gymattendance_and_more.py  0002_initial.py  0003_initial.py  0003_remove_gymmember_email_remove_gymmember_phone_and_more.py  0004_gymsubscription_gymmember_subscription_and_more.py  0005_gym_is_active_gym_plan_gymstaff_transaction_and_more.py
core/models/: __init__.py  attendance.py  attendence.py  gym.py  gym_staff.py  ledger.py  members.py  subscription.py
core/routes/: __init__.py  attendance_routes.py  gym_routes.py  gym_staff_routes.py  ledger_routes.py  member_routes.py  subscription_routes.py
core/serializers/: attendance_serializer.py  gym_serializer.py  gym_staff_serializer.py  member_serializer.py  subscription_serializer.py  transaction_serializer.py
core/views/: attendance_views.py  gym_staff_views.py  gym_views.py  (+4 more)
owners/: models.py  serializer.py  urls.py  views.py
payments/: urls.py  views.py
users/: authentication.py  jwt_auth.py  models.py  routes.py  serializer.py  socialauth.py  urls.py  views.py
utils/: pagination.py  user_utils.py
ziddfit/: apps.py  models.py
ziddfit_backend/: asgi.py  db_router.py  settings.py  urls.py  wsgi.py
(+17 files in other folders)
